--- a/sections/validation.tex
+++ b/sections/validation.tex
@@ -201,7 +201,7 @@ In order to provide a tabular representation of the results it's necessary to as
 
 \begin{figure}[H]
     \centering
-    \begin{tabular}{|c|c|c|c|c|}
+    \begin{tabular}{|c|c|c|c|c|c|c|}
         \hline
         \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} & \textbf{DIs} & \textbf{DIr} & \textbf{DPDs} & \textbf{DPDr} \\
         \hline
