feat: introduction completed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -71,11 +71,9 @@
 
 \input{./sections/contribution.tex}
 
-\input{./sections/software_architecture.tex}
-
 \input{./sections/validation.tex}
 
-%\input{./sections/conclusion.tex}
+\input{./sections/conclusion.tex}
 
 %----------------------------------------------------------------------------------------
 % BIBLIOGRAPHY
